--- a/css/index.css
+++ b/css/index.css
@@ -866,7 +866,7 @@ footer .copyright span:last-child a {
     font-size: 16px;
   }
 
-  .section-2 .desc .link-one {
+  .section-2 .desc a {
     font-size: 16px;
   }
 
