--- a/css/index.css
+++ b/css/index.css
@@ -106,16 +106,18 @@ html {
 }
 .sub-menu-explorer {
   display: none;
-  min-height: 150px;
+  min-height: 115px;
   left:0px;
   z-index:-1;
+  top: 0px;
   opacity:0;
   transition:opacity linear 0.15s;
   position: absolute;
   width: 300px;
-  padding: 20px;
-  box-shadow: 0px 8px 40px -24px rgb(24 38 46 / 30%), inset 0px -1px 3px -2px rgb(24 38 46 / 50%);
-  background-color: #f5f5f5;
+  padding: 10px;
+  box-shadow: 0 3px 8px rgb(3 3 3 / 26%);
+  padding: 15px 0 0px 15px;
+  border-radius: 5px;
 }
 .sub-menu-explorer li a {
   padding:10px 30px;
@@ -123,7 +125,8 @@ html {
 }
 .nav-item:hover .sub-menu-explorer{
   display: block;
-  z-index:1;
+  z-index: 9999999;
+  top: 25px;
   opacity:1;
 }
 
@@ -1183,7 +1186,7 @@ footer .copyright span:last-child a {
     box-shadow: none;
     width: 100%;
     z-index:1;
-  opacity:1;
+    opacity:1;
     padding: 0;
     min-height: auto;
   }
