--- a/css/index.css
+++ b/css/index.css
@@ -125,8 +125,8 @@ html {
 }
 .nav-item:hover .sub-menu-explorer{
   display: block;
-  z-index: 9999999;
-  top: 25px;
+  z-index: 9999;
+  top: 40px;
   opacity:1;
 }
 
@@ -797,6 +797,7 @@ footer .copyright span:last-child a {
 
 /* Large devices (desktops, less than 1200px) */
 @media screen and (max-width: 1199.98px) {
+
 }
 
 /* (1920x1080) Full HD Display */
@@ -852,7 +853,8 @@ footer .copyright span:last-child a {
     margin-top: 20px !important;
   }
 }
-
+@media (max-width: 1400px) {
+}
 @media (max-width: 1279px) {
 }
 /* Medium devices (tablets, less than 992px) */
