add animation an css menu

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ html {
   padding: 15px 0 0px 15px;
   width: 300px;
   margin-top: 10px;
+  background-color:#ffffff;
 }
 .sub-menu-explorer li a {
   padding:10px 30px;
